Add .gitignore and DB connection

--- a/ExpenseTracker.Api/appsettings.json
+++ b/ExpenseTracker.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=expense_tracker;Username=postgres;Password=*******"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
